--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -70,19 +70,22 @@
   <div class="__header__"></div>
   <div class="__body__">
     <div class="container">
-      <h3>회원가입 전 서비스 이용 약관 동의</h3>
+      <h3>회원가입</h3>
       <div class="terms">
-          서비스에 액세스하거나 서비스를 사용함으로써 귀하는 본 약관을 준수할 것에 동의하게 됩니다.
+        <ul>
+            <li>서비스에 액세스하거나 서비스를 사용함으로써 귀하는 본 약관을 준수할 것에 동의하게 됩니다.</li>
+        </ul>
       </div>
+      <hr>
       <form action="/signup" method="POST">
           <label for="agree"><input type="checkbox" id="agree" name="agree" required> 서비스 약관에 동의합니다.</label><br>
           <div class="form-group">
               <label for="username">사용자 아이디</label>
-              <input type="text" id="username" name="username" pattern="[A-Za-z0-9]{1,12}" maxlength="12" placeholder="영문과 숫자 사용, 최대 12자리" required>
+              <input type="text" id="username" name="username" pattern="[A-Za-z0-9가-힣]{2,12}" placeholder="영문과 한글, 숫자 사용, 최소 2자리 ~ 최대 12자리" required>
           </div>
           <div class="form-group">
               <label for="password">비밀번호</label>
-              <input type="password" id="password" name="password" required>
+              <input type="password" id="password" name="password" pattern="[A-Za-z0-9]{4,20}" required>
           </div>
           <input type="submit" value="회원가입">
       </form>
