feat: 관리자 페이지 추가 admin.ejs File

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -67,7 +67,7 @@
           password: $("#password").val()
         },
         success: function() {
-          window.location.href = '/';
+          window.location.href = '/'
         },
         error: function(xhr, status, error) {
           alert(xhr.responseText);
