--- a/views/list.ejs
+++ b/views/list.ejs
@@ -40,8 +40,8 @@
       <a href="<%= page_total == currentPage ? '#' : `/?${page_search}page=${currentPage + 1}` %>"><button type="button" class="btn btn-dark" <%= page_total == currentPage ? 'disabled' : '' %>><i class="fa fa-arrow-right" aria-hidden="true"></i></button></a>
   </div>
 </div>
-<table class="table table-hover" style="border: 1px solid #ccc;">
-    <col style="width:60%;"><col><col style="width:10%;"><col style="width:7%;"><col style="width:7%;">
+<table class="table table-hover list" style="border: 1px solid #ccc;">
+    <col style="width:55%;"><col><col style="width:12%;"><col style="width:8%;"><col style="width:8%;">
     <thead>
       <tr>
         <th scope="col">제목</th>
@@ -53,7 +53,7 @@
     </thead>
     <tbody class="table-group-divider">
       <% data.forEach(item => { %>
-        <tr class="<%= item.user_id==authStatus.user_id?'table-primary':''%>">
+        <tr class="<%= item.user_id==authStatus.user_id?'table-info':''%>">
           <td>
             <a style="display:block; color:black; text-decoration-line: none; width:100%;" href="/boards/<%= item.id %>">
               <%= item.subject %>
